[tool.poetry]
name = "sf6-frame-analyzer"
version = "0.1.0"
description = ""
authors = ["Shinya Maeda <dosuken0122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "sf6_frame_analyzer.main:start"
